extra scss files for media queries

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -139,70 +139,4 @@ ul {
   filter: brightness(1); /* Normal */
 }
 
-@media (max-width: 1450px) {
-  .header-content {
-    width: 90%;
-  }
-}
-
-@media (max-width: 1100px) {
-  .burger-menu-btn {
-    display: block !important;
-    img {
-      position: relative;
-      right: 50px;
-    }
-  }
-
-  .header-links {
-    display: none;
-  }
-
-  .header {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-}
-
-@media (max-width: 700px) {
-  .header {
-    h2 {
-      margin-left: 20px;
-    }
-  }
-  .burger-menu-btn {
-    margin-right: 24px;
-  }
-}
-
-@media (max-width: 500px) {
-  .header {
-    h2 {
-      font-size: 38px;
-    }
-  }
-
-  .translation-switch {
-    img {
-      width: 40%;
-    }
-  }
-
-  .burger-menu-btn {
-    margin-right: 15px;
-
-    div {
-      width: 35px;
-      height: 35px;
-    }
-  }
-}
-
-@media (max-width: 400px) {
-  .header {
-    h2 {
-      font-size: 34px;
-      margin-left: 10px;
-    }
-  }
-}
+@import "./header-media.scss";
