responsive adjustments for privacy policy

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -122,8 +122,10 @@ textarea {
   }
 }
 
-.purple {
-  color: var(--secondary-color);
+.check-box {
+  .purple {
+    color: var(--secondary-color);
+  }
 }
 
 .privacy-policy {
