--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <div class="shadow-container">
+    <div class="shadow-container-portfolio">
       <img
         class="purple-shadow-portfolio"
         src="assets/img/purple_shadow_portfolio.png"
