--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -38,14 +38,14 @@
         <a href="https://github.com/ozcanmirzanli" target="_blank">
           <img src="assets/img/github_btn.png" alt="github_btn" />
         </a>
-        <a href="mailto:ozcanmirzanli@proton.me" target="_blank">
+        <a href="mailto:kontakt@ozcanmirdev.com" target="_blank">
           <img src="assets/img/email_btn.png" alt="email_btn" />
         </a>
         <a href="https://www.linkedin.com/in/ozcan-mirzanli/" target="_blank">
           <img src="assets/img/linkedin_btn.png" alt="linkedin_btn" />
         </a>
       </div>
-      <span>ozcanmirzanli&#64;proton.me</span>
+      <span>kontakt&#64;ozcanmirdev.com</span>
     </div>
     <div class="scroll-text">
       <span>{{ "LANDING_PAGE.SCROLL_TEXT" | translate }}</span>
