--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -23,6 +23,10 @@
   }
 }
 
+.about-me-text.animate {
+  animation: half-slide-in-left 1s ease-out forwards;
+}
+
 .about-me-details {
   display: flex;
   flex-direction: column;
@@ -61,6 +65,10 @@
   z-index: 3;
 }
 
+.photo-container.animate {
+  animation: half-slide-in-right 1s ease-out forwards;
+}
+
 .about-me-photo {
   img {
     width: 453px;
@@ -78,7 +86,7 @@
   width: 100%;
   height: 150%;
   pointer-events: none;
-  animation: shadowPulse 2.5s infinite ease-in-out;
+  animation: shadowPulse 2s infinite ease-in-out;
 }
 
 .about-me-shadow {
